syntax = "proto3";
package perm;

import "perm/perm.proto";

option go_package = "github.com/bianjieai/iritamod/modules/perm/types";

// Query defines the gRPC querier service for perm module
service Query {
  // Roles queries the roles of a given address
  rpc Roles(QueryRolesRequest) returns (QueryRolesResponse) {}

  // Blacklist queries the black list
  rpc AccountBlockList(QueryBlockListRequest) returns (QueryBlockListResponse) {
  }

  // ContractDenyList queries the contract deny list
  rpc ContractDenyList(QueryContractDenyList)
      returns (QueryContractDenyListResponse) {}
}

// QueryRolesRequest is request type for the Query/Roles RPC method
message QueryRolesRequest { string address = 1; }

// QueryRolesResponse is response type for the Query/Roles RPC method
message QueryRolesResponse { repeated Role roles = 1; }

// QueryBlacklistRequest is request type for the Query/Blacklist RPC method
message QueryBlockListRequest {}

// QueryBlacklistResponse is response type for the Query/Blacklist RPC method
message QueryBlockListResponse { repeated string addresses = 1; }

// QueryBlacklistRequest is request type for the Query/Blacklist RPC method
message QueryContractDenyList {}

// QueryBlacklistResponse is response type for the Query/Blacklist RPC method
message QueryContractDenyListResponse { repeated string addresses = 1; }